# notemac-plus-plus

./: .gitignore  CHANGELOG.md  CHECKLIST_VERIFICATION_REPORT.md  CONTRIBUTING.md  LICENSE  Notemac++ - Development Workflow.docx  Notemac++ - New Feature Checklist.docx  Notemac++ - New Version Release Checklist.docx  README.md  TEST-PLAN-11-PHASES.md  build-install-dmg.sh  build-portable-dmg.sh  build-web.sh  index.html  landing-page.html  package-lock.json  package.json  playwright-electron.config.ts  playwright-tauri.config.ts  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.config.ts
.github/: pull_request_template.md
app/: icon.icns  index.html  version.json
assets/: AIChatPanelViewPresenter-BipdxIcc.js  AIChatPanelViewPresenter-CsKT6Den.js  AIChatPanelViewPresenter-CybvdC-k.js  AISettingsViewPresenter-C_ZBSgTe.js  AISettingsViewPresenter-CnNfisEB.js  AISettingsViewPresenter-eEpwcFx8.js  AboutDialogViewPresenter-C2Ec6IYA.js  AboutDialogViewPresenter-DkTIB8qL.js  AboutDialogViewPresenter-d8DUzePX.js  CharInRangeDialogViewPresenter-C5_JKVkr.js  CharInRangeDialogViewPresenter-D0qUFJvW.js  CharInRangeDialogViewPresenter-zDk9-ANd.js  CloneRepositoryViewPresenter-CE2aaX5e.js  CloneRepositoryViewPresenter-CUzrs4GA.js  CloneRepositoryViewPresenter-Crp8irrv.js  ColumnEditorDialogViewPresenter-B99RRkCn.js  (+84 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  menu.rs
src-tauri/src/commands/: crypto_operations.rs  dialog_operations.rs  file_operations.rs  mod.rs  process_operations.rs  window_operations.rs
(+1635 files in other folders)
