[package]
name = "notemac-plus-plus"
version = "2.4.0"
description = "Notemac++ - A Notepad++ inspired text editor for Mac and Web"
authors = ["Sergio Agustin De Vita"]
edition = "2021"

[lib]
name = "notemac_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"
walkdir = "2"
